--- a/style.css
+++ b/style.css
@@ -12,11 +12,16 @@ body {
   overflow: auto;
 }
 
-header {
+.container {
+  margin: 0;
+  padding: 0;
+}
+
+.row-1 {
   background: rgba(17, 19, 17, 0.75);
 }
 
-h1 {
+header {
   padding: 20px 0;
   margin: 0;
   margin-bottom: 20px;
@@ -26,22 +31,22 @@ h1 {
   font-weight: 600;
 }
 
-h2 {
-  padding: 20px 0;
-  margin: 0;
-  margin-bottom: 20px;
-  font-size: 40px;
-  color: #eee;
-  text-align: center;
-  font-weight: 600;
-}
-
-.nav {
+.row-2 {
   background: rgba(17, 19, 17, 0.75);
 }
 
 .nav-item {
   font-size: 20px;
+}
+
+.row-3 {
+  padding: 20px 0;
+  margin: 0;
+  margin-bottom: 20px;
+  font-size: 40px;
+  color: #eee;
+  text-align: center;
+  font-weight: 600;
 }
 
 #bio-img {
