--- a/style.css
+++ b/style.css
@@ -35,10 +35,6 @@ header {
   background: rgba(17, 19, 17, 0.75);
 }
 
-.nav-item {
-  font-size: 20px;
-}
-
 .row-3 {
   padding: 20px 0;
   margin: 0;
@@ -53,6 +49,8 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 50%;
+  max-height: auto;
 }
 
 div.transbox {
