--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
   background: rgba(17, 19, 17, 0.75);
 }
 
-.row-3 {
+.row-index1 {
   padding: 20px 0;
   margin: 0;
   margin-bottom: 20px;
@@ -49,8 +49,8 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50%;
-  max-height: auto;
+  width: 50%;
+  height: auto;
 }
 
 div.transbox {
