--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header {
   background: rgba(17, 19, 17, 0.75);
 }
 
-.row-index1 {
+.row-3 {
   padding: 20px 0;
   margin: 0;
   margin-bottom: 20px;
@@ -49,8 +49,9 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  max-width: 550px;
   height: auto;
+  width: 100%;
 }
 
 div.transbox {
