--- a/style.css
+++ b/style.css
@@ -66,3 +66,41 @@ div.transbox p {
   font-weight: bold;
   color: #000000;
 }
+
+.card-title {
+  font-size: 30px;
+}
+
+.card {
+  margin: 0 auto;
+  float: none;
+  margin-bottom: 10px;
+  background: rgba(17, 19, 17, 0.75);
+  color: #eee;
+}
+
+.card-img-top {
+  max-width: 750px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-text {
+  font-size: 20px;
+}
+
+.container-fluid-2 {
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+}
+
+.row-cont {
+  margin: 0 auto;
+  float: none;
+  margin-bottom: 10px;
+  background: rgba(17, 19, 17, 0.75);
+  color: #eee;
+max-width: 1400px;
+}
